--- a/components.json
+++ b/components.json
@@ -13,7 +13,7 @@
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "ui": "@/uiElements",
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
