--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: "3.8"
+version: '3.8'
 services:
   app:
-    build:
-      context: .
-    ports:
-      - "3000:3000"
+    image: node:20
     volumes:
       - .:/app
-      - /app/node_modules
+    working_dir: /app
+    ports:
+      - "5002:3000"
     command: npm run dev
